modules/gdscript/tests/scripts/parser/errors/invalid_mixed_destructuring_with_spread_in_the_middle.gd
func test():
    var [a, ..rest, b] = [1, 2, 3, 4]
